BUGFIX: show author names on mobile
Former-commit-id: 26eb93a46aa9aa6d4c4b6d9c53fed7c1bdb2d4e5

--- a/WWW/assets/css/main.css
+++ b/WWW/assets/css/main.css
@@ -2845,6 +2845,14 @@
                 }
 
                 .post > header .meta .author .name {
+                    /* instead of hiding author name, we will hide author
+                     * picture, since nobody uses it */
+                    /* display: none; */
+                }
+
+                .post > header .meta .author > img {
+                    /* instead of hiding author name, we will hide author
+                     * picture, since nobody uses it */
                     display: none;
                 }
 
